--- a/src/main/resources/head.html
+++ b/src/main/resources/head.html
@@ -2,7 +2,7 @@
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js" >  </script>
 <script src="http://code.jquery.com/jquery-1.10.2.js" >  </script>
 <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js" >  </script>
-<script src="https://raw.github.com/padolsey/prettyprint.js/master/prettyprint.js" >  </script>
+<script src="https://rawgithub.com/padolsey/prettyprint.js/master/prettyprint.js" >  </script>
 <link rel="stylesheet"  type="text/css" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" />
 
 <style>
