pretty display request

--- a/src/main/resources/head.html
+++ b/src/main/resources/head.html
@@ -256,8 +256,24 @@ line-height: 1em;  }
 .button-grey {
     background: rgba(255, 255, 255, 0.69); }
 
-</style>
+/**
+http://learnlayout.com/inline-block.html
+http://www.scientificpsychic.com/etc/css-mouseover.html
+**/
 
+span.dropt {border-bottom: thin dotted; background: #ffeedd;}
+span.dropt:hover {text-decoration: none; background: #ffffff; z-index: 6; }
+span.dropt span {position: absolute; left: -9999px;
+margin: 20px 0 0 0px; padding: 3px 3px 3px 3px;
+border-style:solid; border-color:black; border-width:1px; z-index: 6;}
+span.dropt:hover span {left: 2%; background: #ffffff;}
+span.dropt span {position: absolute; left: -9999px;
+margin: 4px 0 0 0px; padding: 3px 3px 3px 3px;
+border-style:solid; border-color:black; border-width:1px;}
+span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
+
+</style>
+<!--
 <style>
     /* Pure CSS Tooltips */
     span.info{
@@ -344,7 +360,7 @@ line-height: 1em;  }
 
 </style>
 
-<!--
+
 <script type="text/javascript">
 
 function escapeHTML(str) {
