--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,15 @@
-Hello Groovy World
+<!DOCTYPE HTML>
+<html>
+<meta charset="utf-8" />
+<head>
+    <title>Java Linked Data</title>
+    </head>
+<body>
+<p>
+Hello World!
+</p>
+<p>
+    <a href="clazz/display.groovy">Class Displayer</a>
+</p>
+</body>
+</html>
