--- a/src/main/resources/head.html
+++ b/src/main/resources/head.html
@@ -4,8 +4,10 @@
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js" >  </script>
 <script src="https://rawgithub.com/padolsey/prettyprint.js/master/prettyprint.js" >  </script>
-
 <script src="https://rawgithub.com/epeli/underscore.string/master/lib/underscore.string.js" >  </script>
+<script src="https://rawgithub.com/patricklodder/jquery-zclip/master/jquery.zclip.js" >  </script>
+
+
 <script src="http://warfares.github.io/pretty-json/libs/underscore-min.js" >  </script>
 <script src="http://warfares.github.io/pretty-json/libs/backbone-min.js" >  </script>
 <script src="http://warfares.github.io/pretty-json/pretty-json-min.js" >  </script>
