--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,5 +11,31 @@ Hello World!
 <p>
     <a href="clazz/display.groovy">Class Displayer</a>
 </p>
+<p>
+    <a href="https://github.com/chunqishi/lapps/tree/master/edu.brandeis.cs.opennlp-web-service">edu.brandeis.cs.opennlp-web-service</a>
+</p>
+<ul>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.OpenNLP" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.OpenNLP</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.JsonSplitter" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.JsonSplitter</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.JsonTokenizer" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.JsonTokenizer</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.NamedEntityRecognizer" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.NamedEntityRecognizer</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.POSTagger" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.POSTagger</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.Parser" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.Parser</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.Splitter" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.Splitter</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.opennlp.Tokenizer" target="_blank">edu.brandeis.cs.lappsgrid.opennlp.Tokenizer</a></li>
+</ul>
+<p>
+    <a href="https://github.com/chunqishi/lapps/tree/master/edu.brandeis.cs.stanfordnlp-web-service"> edu.brandeis.cs.stanfordnlp-web-service</a>
+</p>
+<ul>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.Coreference" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.Coreference</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.NamedEntityRecognizer" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.NamedEntityRecognizer</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.POSTagger" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.POSTagger</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.Parser" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.Parser</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.Splitter" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.Splitter</a></li>
+    <li><a href="clazz/display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.Tokenizer" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.Tokenizer</a></li>
+
+</ul>
+
 </body>
 </html>
