fixed input problem

--- a/src/main/resources/head.html
+++ b/src/main/resources/head.html
@@ -218,8 +218,8 @@ color: Ivory   ; }
 
 div.box {
 display: inline-block;
-width: 200px;
-height: 100px;
+width: 400px;
+height: 200px;
 margin: 8px;
 border-style:solid;
 border-width: 1.5px;
@@ -265,14 +265,17 @@ http://www.scientificpsychic.com/etc/css-mouseover.html
 
 span.dropt {border-bottom: thin dotted; background: #ffeedd;}
 span.dropt:hover {text-decoration: none; background: #ffffff; z-index: 6; }
+
 span.dropt span {position: absolute; left: -9999px;
-margin: 20px 0 0 0px; padding: 3px 3px 3px 3px;
-border-style:solid; border-color:black; border-width:1px; z-index: 6;}
-span.dropt:hover span {left: 2%; background: #ffffff;}
+                 margin: 20px 0 0 0px; padding: 3px 3px 3px 3px;
+                 border-style:solid; border-color:black; border-width:1px; z-index: 6;}
+span.dropt:hover span {left: auto; background: #ffffff;}
+
 span.dropt span {position: absolute; left: -9999px;
-margin: 4px 0 0 0px; padding: 3px 3px 3px 3px;
-border-style:solid; border-color:black; border-width:1px;}
-span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
+                 margin: 4px 0 0 0px; padding: 3px 3px 3px 3px;
+                 border-style:solid; border-color:black; border-width:1px;}
+span.dropt:hover span {margin: 20px 0 0 0px; background: #ffffff; z-index:6;}
+
 
 </style>
 <!--
