added jsonpath and jsonld

--- a/src/main/resources/head.html
+++ b/src/main/resources/head.html
@@ -13,6 +13,10 @@
 <script src="http://warfares.github.io/pretty-json/pretty-json-min.js" >  </script>
 
 
+<script src="https://rawgithub.com/digitalbazaar/jsonld.js/master/js/jsonld.js" >  </script>
+<script src="https://rawgithub.com/digitalbazaar/jsonld.js/master/js/rdfa.js" >  </script>
+<script src="https://rawgithub.com/digitalbazaar/jsonld.js/master/js/request.js" >  </script>
+<script src="https://raw.githubusercontent.com/s3u/JSONPath/master/lib/jsonpath.js" >  </script>
 
 <link rel="stylesheet"  type="text/css" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" />
 <link rel="stylesheet"  type="text/css" href="http://fonts.googleapis.com/css?family=Quicksand" />
