--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,12 @@ Hello World!
     <a href="display.groovy">Class Displayer</a>
 </p>
 <p>
+    <a href="jsonldvalid.groovy">JSON(-LD) Validator</a>
+</p>
+<p>
+    <a href="gitload.groovy">Git Loader</a>
+</p>
+<p>
     <a href="https://github.com/chunqishi/lapps/tree/master/edu.brandeis.cs.opennlp-web-service">edu.brandeis.cs.opennlp-web-service</a>
 </p>
 <ul>
