update home page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,9 +5,14 @@
     <title>Java Linked Data</title>
     </head>
 <body>
+<h1 align="center"> Java Link Data Experiment </h1>
 <p>
 Hello World!
 </p>
+
+
+<hr />
+<h2> Tools </h2>
 <p>
     <a href="display.groovy">Class Displayer</a>
 </p>
@@ -17,6 +22,10 @@ Hello World!
 <p>
     <a href="gitload.groovy">Git Loader</a>
 </p>
+
+<hr />
+
+<h2>Class List</h2>
 <p>
     <a href="https://github.com/chunqishi/lapps/tree/master/edu.brandeis.cs.opennlp-web-service">edu.brandeis.cs.opennlp-web-service</a>
 </p>
