--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -431,7 +431,7 @@ function path() {
 <p>
 <table>
     <tr>
-        <th>JSON: </th><th> Paths:</th><th> </th><th>Results:</th>
+        <th>JSON: </th><th> <a href="http://goessner.net/articles/JsonPath/" target="_blank">JSON Path </a>:</th><th> </th><th>Result:</th>
     </tr><tr><td>
     <textarea id="json_source" cols="50" rows="20">{
         "@context": {
