--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@ Hello World!
     <a href="display.groovy">Class Displayer</a>
 </p>
 <p>
-    <a href="jsonldvalid.groovy">JSON(-LD) Validator</a>
+    <a href="json.html">JSON(-LD) Validator</a>
 </p>
 <p>
     <a href="gitload.groovy">Git Loader</a>
