--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -518,7 +518,8 @@ $.@context.homepage.*
 "@context": {
     "homepage": "&$.@context.homepage.* "
     },
-"homepage": "%*(%|(&$.homepage,\"\\\\.\"), \"-\")"
+"homepage": "%*(%|(&$.homepage,\"\\\\.\"), \"-\")",
+"name": "%|(%-([\"hello\", \".world\"]){ %r += %e;},\"\\\\.\")"
 }</textarea></td><td>
     <textarea id="json_obj" cols="50" rows="20">{
         "@context": {
