--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -389,6 +389,8 @@ function transform() {
     <a href="#jsonpath">jsonpath</a>
     |
     <a href="#json2json">json2json</a>
+    |
+    <a href="https://github.com/chunqishi/jldservice/issues" target="_blank">report bugs</a>
 </nav>
 
     <h1  align="center">JSON Validate</h1>
@@ -465,7 +467,7 @@ function transform() {
 <p>
 <table>
     <tr>
-        <th>JSON: </th><th> <a href="http://goessner.net/articles/JsonPath/" target="_blank">JSON Path </a>:</th><th> </th><th>Result:</th>
+        <th>JSON: </th><th> JSON Path (<a href="http://goessner.net/articles/JsonPath/" target="_blank">What ?</a>):</th><th> </th><th>Result:</th>
     </tr><tr><td>
     <textarea id="json_source" cols="50" rows="20">{
         "@context": {
@@ -511,7 +513,7 @@ $.@context.homepage.*
 <p>
 <table>
     <tr>
-        <th><a href="https://rawgithub.com/chunqishi/edu.brandeis.cs.json2json/master/docs/design-2014-03-30.html" target="_blank">Template</a>:</th>
+        <th>Template (<a href="https://rawgithub.com/chunqishi/edu.brandeis.cs.json2json/master/docs/design-2014-03-30.html" target="_blank">What or Bugs ?</a>):</th>
         <th>JSON:</th><th> </th><th>Transformation:</th>
     </tr><tr><td>
     <textarea id="json_template" cols="50" rows="20">{
