drag iframe fail

--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -5,9 +5,13 @@
     <meta content="utf-8" http-equiv="encoding">
     <title>JsonValid</title>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js" >  </script>
+    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js" >  </script>-->
     <!--script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script-->
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.1.js" >  </script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js" >  </script>
+
+
     <script type="text/javascript" src="https://rawgithub.com/padolsey/prettyprint.js/master/prettyprint.js" >  </script>
     <script type="text/javascript" src="https://rawgithub.com/epeli/underscore.string/master/lib/underscore.string.js" >  </script>
     <script type="text/javascript" src="https://rawgithub.com/patricklodder/jquery-zclip/master/jquery.zclip.js" >  </script>
@@ -23,7 +27,6 @@
     <!--<script type="text/javascript" src="https://rawgithub.com/digitalbazaar/jsonld.js/master/js/request.js" >  </script>-->
     <script type="text/javascript" src="https://rawgithub.com/blatyo/jsonpath.js/master/jsonpath.js" >  </script>
     <!--<script type="text/javascript" src="https://rawgithub.com/douglascrockford/JSON-js/master/json.js" >  </script>-->
-
 
 <script type="text/javascript">
 
@@ -162,10 +165,6 @@ function transform() {
         }
     });
 }
-
-
-
-
 </script>
 
     <style>
@@ -375,6 +374,7 @@ function transform() {
     font-weight:bold;
     line-height: 1em;  }
 
+
     </style>
 </head>
 
@@ -396,13 +396,18 @@ function transform() {
     <h1  align="center">JSON Validate</h1>
 
     <h2> Please Validate the Json </h2>
-    <iframe src="http://pro.jsonlint.com/" seamless="seamless" width="62%" scrolling="yes">
+
+    <iframe src="http://pro.jsonlint.com/" width="62%" height="600px" scrolling="yes"> </iframe>
     <p>Your browser does not support iframes, please goto <a href="http://pro.jsonlint.com/" target="_blank">JsonLint</a>.</p>
     </iframe>
+
+
     <p>
     <!------------------------------------------------------------------------------------>
     <hr/>
-    <h2> Please Validate the Json-LD</h2>
+
+    <a name="jsonld" />
+    <h2> Please Validate the Json-LD <a href="#_top_" style="text-decoration: none;">^</a></h2>
     <table>
 
     <tr>
