drag iframe fail

--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -397,7 +397,7 @@ function transform() {
 
     <h2> Please Validate the Json </h2>
 
-    <iframe src="http://pro.jsonlint.com/" width="62%" height="600px" scrolling="yes"> </iframe>
+    <iframe src="http://pro.jsonlint.com/" width="62%" height="600px" scrolling="yes">
     <p>Your browser does not support iframes, please goto <a href="http://pro.jsonlint.com/" target="_blank">JsonLint</a>.</p>
     </iframe>
 
