upgrade json2json to 0.1.4

--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -525,8 +525,8 @@ $.@context.homepage.*
 "@context": {
     "homepage": "&$.@context.homepage.* "
     },
-"homepage": "%*(%|(&$.homepage,\"\\\\.\"), \"-\")",
-"name": "%|(%-([\"hello\", \".world\"]){ %r += %e;},\"\\\\.\")"
+"homepage": "%*( %|(  &$.homepage, \".\"),     \"-\")",
+"name": "%-(  [\"hello\", \".world\"]  ){  %r += %e; }"
 }</textarea></td><td>
     <textarea id="json_obj" cols="50" rows="20">{
         "@context": {
