--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -522,29 +522,67 @@ $.@context.homepage.*
         <th>JSON:</th><th> </th><th>Transformation:</th>
     </tr><tr><td>
     <textarea id="json_template" cols="50" rows="20">{
-"@context": {
-    "homepage": "&$.@context.homepage.* "
-    },
-"homepage": "%*( %|(  &$.homepage, \".\"),     \"-\")",
-"name": "%-(  [\"hello\", \".world\"]  ){  %r += %e; }"
-}</textarea></td><td>
+        "html": {
+        "-xmlns:bar": "http://www.bar.org",
+        "-xmlns:foo": "http://www.foo.org/",
+        "body": {
+        "h2": "My CD Collection",
+        "table": {
+        "-border": "1",
+        "tr": {"%!for": {
+        "%$"    : {"%!s":[
+        {
+        "-bgcolor": "#9acd32",
+        "th": [
+        "Title",
+        "Artist",
+        "Country",
+        "Company",
+        "Price",
+        "Year"
+        ]
+        }]},
+        "%[]"   : ["&$.catalog.foo:cd", "%i", "%e"],
+        "%each" : {"%s": {"%]+": ["%s", {"td": [ {"%&":["%e", "$.title"]} ,{"%&":["%e", "$.artist"]}, {"%&":["%e", "$.country"]}, {"%&":["%e", "$.company"]}, {"%&":["%e", "$.price"]}, {"%&":["%e", "$.bar:year"]}]}]}},
+        "%#"    : "%s"
+        }
+        }
+        }
+        }
+        }
+        }</textarea></td><td>
     <textarea id="json_obj" cols="50" rows="20">{
-        "@context": {
-        "name": "http://schema.org/name",
-        "homepage": {
-        "@id": "http://schema.org/url",
-        "@type": "@id"
+        "catalog": {
+        "-xmlns:foo": "http://www.foo.org/",
+        "-xmlns:bar": "http://www.bar.org",
+        "foo:cd": [
+        {
+        "title": "Empire Burlesque",
+        "artist": "Bob Dylan",
+        "country": "USA",
+        "company": "Columbia",
+        "price": "10.90",
+        "bar:year": "1985"
         },
-        "image": {
-        "@id": "http://schema.org/image",
-        "@type": "@id"
-        }
+        {
+        "title": "Hide your heart",
+        "artist": "Bonnie Tyler",
+        "country": "UK",
+        "company": "CBS Records",
+        "price": "9.90",
+        "bar:year": "1988"
         },
-        "image": "http://manu.sporny.org/images/manu.png",
-        "name": "Manu Sporny",
-        "homepage": "http://manu.sporny.org/"
+        {
+        "title": "Greatest Hits",
+        "artist": "Dolly Parton",
+        "country": "USA",
+        "company": "RCA",
+        "price": "9.90",
+        "bar:year": "1982"
         }
-    </textarea></td><td>
+        ]
+        }
+        }</textarea></td><td>
     <input type="button" value="Transform" onclick="transform()" />
 </td><td>
     <textarea  id="json_transform"  cols="50" rows="20">
