fix xpath exception

--- a/src/main/webapp/visualization.html
+++ b/src/main/webapp/visualization.html
@@ -430,7 +430,7 @@ And the mome raths outgrabe.
     <textarea id="output1" style="width:66%;height:400px;font-size:11px;border:2px inset">
     </textarea>
 
-    <p>Service (WSDL): </p>
+    <p>NER Service (WSDL): </p>
     <input id="wsdl2" type="text" size="120" value="http://eldrad.cs-i.brandeis.edu:8282/opennlp-web-service/0.0.4-SNAPSHOT/services/NamedEntityRecognizer?wsdl">
     <input type="button" value="Run" onclick="service('wsdl2','output1','last-annotation')">
     <textarea id="last-annotation" style="width:66%;height:400px;font-size:11px;border:2px inset"></textarea>
