--- a/src/main/webapp/visualization.html
+++ b/src/main/webapp/visualization.html
@@ -377,8 +377,7 @@
 
     <!------------------------------------  Editor ------------------------------------------------------->
     <h2 align="center"> TEXT </h2>
-    <div id="editor">
-    JABBERWOCKY
+    <div id="editor">JABBERWOCKY
 By Lewis Carroll
 
 'Twas brillig, and the slithy toves
